# meshing

./: .gitignore  LICENSE.txt  README.md  requirements.yml  requirements2.yml
.github/workflows/: python-package-conda.yml
src/: pyproject.toml  setup.py
src/meshing/: __init__.py  meshes2D.py  meshes3D.py
tests/: 2d.py  3d.py  __tracked_surface.stl  surface_mesh_temp.stl  test_2d.py  test_3d.py
